[package]
name = "nurv_config"
version = "1.0.0"
edition = "2024"
description = "A Rust library for managing YAML configuration files in a structured way."
license = "MIT OR Apache-2.0"
authors = ["Yasser Harbi"]

[dependencies]
config = { version = "0.15.19", default-features = false, features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
